# ModelScope

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLI_README.md  README.md  app.py  cli.py  modelscope  patch_evaluator.py  pyproject.toml  pytest.ini  requirements.txt  test_fragment.py  test_project.json
.claude/: CLAUDE.md
.memsearch/memory/: 2026-06-25.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-08.md  2026-07-10.md
.repowise/: .augment-session.json  centrality_cache.pkl  config.yaml  duplication_pairs.pkl  knowledge-graph.json  mcp.json  parse_cache.pkl  state.json
.streamlit/: config.toml
batch_results/: batch_results.csv  batch_results.json
config/: __init__.py  bash_templates.py  defaults.py  metrics.py  scenarios.py
core/: __init__.py  batch_runner.py  caf_runner.py  caf_state.py  comparison.py  environment.py  evaluator.py  judge.py  llama_metrics.py  llama_server.py  logsetup.py  mcp_catalog.py  mcp_manager.py  metric_thresholds.py  models.py  preflight.py  project_import.py  remote_server.py  run_status.py  schema_registry.py  session_log.py  settings_store.py  state.py  streaming.py  test_runner.py  utils.py
mcp-server/: discover_tools.mjs  index.js  mcp_config.json  tools.js  tools.json
tests/: conftest.py
tools/: preflight_check.py
ui/: batch_tab.py  caf_dashboard.py  caf_tab.py  comparison_tab.py  components.py  config_tab.py  dashboard_tab.py  execute_tab.py  judge_config.py  preflight_tab.py  styles.py  target_tab.py  terminal.py  test_suite_tab.py  workflow_config.py
(+128 files in other folders)
